# package-content-elementizer

./: .env.example  git-packages.json  pyproject.toml
talkingdb_ce/services/reader/docx/: docx_paginate.py  docx_reader.py
talkingdb_ce/services/reader/pdf/: _convert_main.py  pdf_reader.py
