[project]
name = "package-content-elementizer"
version = "3.0.0"
description = "A Python package for reading documents, extracting structured elements programmatically"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [
    { include = "talkingdb_ce" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.12.5,<3.0.0"
python-docx = ">=1.2.0,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
debugpy = ">=1.8.19,<2.0.0"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "cd57f4b0f6a4f744e57ddb78d392b215f3c0f7b7" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "3a5b2fb72af64d3b04788bbd78f73be528dc84f8" }
talkingdb-helpers = { git = "git+https://github.com/TalkingDB/base-tdb-helpers.git", rev = "c4ada3824cb1d8e752d37141c827547dbb64b2b7" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
