[project]
name = "package-content-elementizer"
version = "3.0.0"
description = "A Python package for reading documents, extracting structured elements programmatically"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [
    { include = "talkingdb_ce" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

fastapi = ">=0.125.0,<0.126.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }
requests = ">=2.32.5,<3.0.0"
pydantic = ">=2.12.5,<3.0.0"
python-docx = ">=1.2.0,<2.0.0"
pdf2docx = ">=0.5.8,<0.6.0"
pymupdf = ">=1.24.0,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
debugpy = ">=1.8.19,<2.0.0"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "5b10d693758b281d0a474bb09dd8ca4238dcb080" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "2cec542cf24b70a46d174f633dd4b042f20aa4cf" }
# TEMPORARY fork pin - revert to TalkingDB URL once the helpers PR merges
talkingdb-helpers = { git = "git+https://github.com/RICHIKA-RANA/base-tdb-helpers.git", rev = "106eda248fc7497f3fdef8b59c4e641b4b2c7dac" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
